# vim_colorscheme_generator

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
scripts/: clone_respos.sh  generate_color_database.sh  generate_color_database.vim  generate_database.sh
tests/: test_vim_colorscheme_generator.py
vim_colorscheme_generator/: data.py  main.py  model.py
